tests/fixtures/negative/coroutines/SynchronizedOnNonFinal.kt
package test

class Worker {
    private val lock = Any()

    fun op() {
        synchronized(lock) {
            println("work")
        }
    }
}
